...
        android:minLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_edit_profile_phone" />

    <Button
        android:id="@+id/button_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="deleteUserAccountCall"
        android:text="@string/activity_profile_icon_delete_account"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintBottom_toBottomOf="@+id/image_view_edit_profile_image"
        app:layout_constraintEnd_toEndOf="@+id/image_view_edit_profile_image"
        app:layout_constraintStart_toStartOf="@+id/image_view_edit_profile_image"
        app:layout_constraintTop_toTopOf="@+id/image_view_edit_profile_image" />

    <ImageButton
        android:id="@+id/button_edit_profile_save_profile_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/edit_profile_save_profile_data"
        android:onClick="saveUserData"
        app:layout_constraintEnd_toEndOf="parent"
...
